--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
 
 			<div class="flex-w m-t-10 m-b-10">
 				<a href="https://forms.gle/uDLkqpWLD5eTzWVp7" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
-					Feedback
+					Suggestion
 				</a>
 			</div>
 		</div>
