--- a/countdown.html
+++ b/countdown.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 20</title>
+	<title>Coming Soon 21</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -39,8 +39,8 @@
 			</div>
 
 			<div class="flex-w m-t-10 m-b-10">
-				<a href="https://forms.gle/uDLkqpWLD5eTzWVp7" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
-					Suggestion
+				<a href="menu.html" class="size2 m1-txt1 flex-c-m how-btn1 trans-04">
+					HOME
 				</a>
 			</div>
 		</div>
@@ -49,7 +49,7 @@
 		<div class="flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-120">
 			<h3 class="l1-txt1 txt-center p-b-35 respon1">
 				<label id = "GFG"> 
-					Coming Soon 
+					Birthday Ends Within 
 				</label>
 			</h3>
 
@@ -129,7 +129,7 @@
 		// 	//go to " http://momentjs.com/timezone/ " to get timezone
 		// });
 
-		var countDownDate = new Date("September 10, 2020 00:00:00").getTime();
+		var countDownDate = new Date("September 11, 2020 00:00:00").getTime();
 
 		// Update the count down every 1 second
 		var x = setInterval(function() {
@@ -157,7 +157,7 @@
 		// If the count down is over, write some text 
 		if (distance <= 0) {
 			// clearInterval(x);
-			document.getElementById("GFG").innerHTML = "Wish you a very happy birthday";
+			document.getElementById("GFG").innerHTML = "Have a blissful year ahead";
 			window.location.href = "menu.html";
 		}
 		}, 1000);
