--- a/giftcard.html
+++ b/giftcard.html
@@ -94,7 +94,7 @@
 				</span>
 
 				<div class="wrap-input100" >
-					<input class="input100" type="text" name="name" placeholder="Card Number - 6000171028207416" readonly>
+					<input class="input100" type="text" name="name" placeholder="Card Number - 6000171023697895" readonly>
 					<span class="focus-input100"></span>
 				</div>
 
@@ -104,7 +104,7 @@
 				</div>
 
 				<div class="wrap-input100">
-					<textarea class="input100" type="text" name="message" placeholder="A small try from my side. I think that there are many things to improve. Despite that, I request that please accept me & my site with all errors. I don't know how much special I am, but you are very precious to me. This birthday is also very special for me because the first time I am gifting something from my earned money.😊😊 God has gifted me this time and I am gifting this to you through this. If you want, you can fill the review form and contribute your some valuable time in my life and make my life more colourful as a rainbow." readonly></textarea>
+					<textarea class="input100" type="text" name="message" placeholder="A small try from my side. I think that there are many things to improve. Despite that, I request that please accept me & my site with all errors. I don't know how much special I am, but you are very precious to me. This birthday is also very special for me because the first time I am gifting something from my earned money.😊😊 God has gifted me this time and I am gifting this to you through this. If you want, you can fill the review form and contribute your some valuable time in my life and make my life more colourful as a rainbow.Be Healthy and Stay Safe." readonly></textarea>
 					<span class="focus-input100"></span>
 				</div>
 
