--- a/countdown.html
+++ b/countdown.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-	<title>Coming Soon 21</title>
+	<title>Waiting..☺☺</title>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 <!--===============================================================================================-->	
@@ -49,7 +49,7 @@
 		<div class="flex-col-c-m p-l-15 p-r-15 p-t-50 p-b-120">
 			<h3 class="l1-txt1 txt-center p-b-35 respon1">
 				<label id = "GFG"> 
-					Birthday Ends Within 
+					Comming Soon 
 				</label>
 			</h3>
 
@@ -129,7 +129,7 @@
 		// 	//go to " http://momentjs.com/timezone/ " to get timezone
 		// });
 
-		var countDownDate = new Date("September 11, 2020 00:00:00").getTime();
+		var countDownDate = new Date("September 10, 2021 00:00:00").getTime();
 
 		// Update the count down every 1 second
 		var x = setInterval(function() {
